# wgo.c.plus.plus

./: .gitignore  CMakeLists.txt  board.cpp  board.h  color.h  colour.h  game.cpp  game.h  io.h  main  main.cpp  node.h  plan.md  position.cpp  position.h  stone.cpp  store.cpp  task.md  utils.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
test/: test_game.cpp
